css/styles.css
body {
    font-family: Recursive, Inter, sans-serif;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #e8faf5;
    color: #00211c;
    text-align: center;
  }
  #welcome-screen, #end-screen {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
  }
  #rules-screen {
    display: flex;
    flex-direction: column;
  }
  #rules-list {
    margin: auto;
    width: 50vw;
    justify-content: center;
    align-items: center;
    text-justify: auto;
    text-align: left;
  }
  #game-container {
    display: none;
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
  }
  .background-container {
    position: absolute; 
    top: 0;
    left: 0;
    width: 100%; 
    height: 100%; 
    z-index: -1; /* Place the overlay behind other content */
    background-image: url("../assets/street.jpg");
    background-size: cover;
    background-position: center center;
    opacity: 0.3; /* Adjust opacity here */
  }
  #camion {
    width: 100px;
    height: 80px;
    background-image: url('../assets/camion.png');
    background-size: cover;
    position: absolute;
    bottom: 0px;
    left: 50%;
  }
  .falling-item {
    position: absolute;
    width: 40px;
    height: 40px;
    font-size: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  #scoreboard {
    position: absolute;
    top: 10px;
    left: 10px;
    font-size: 18px;
  }
  #livesboard {
    position: absolute;
    top: 30px;
    left: 10px;
    font-size: 18px;
  }
  button {
    margin-top: 20px;
    padding: 10px 20px;
    font-size: 16px;
    background-color: #004533;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
  }
  button:hover {
    background-color: #00a06d;
  }
  #rules-button {
    margin-top: 20px;
    padding: 10px 20px;
    font-size: 16px;
    background-color: white;
    color: #004533;
    border: 1px solid #004533;
    border-radius: 5px;
    border-color: #004533;
    cursor: pointer;
  }
  #rules-button:hover {
    background-color: #C7F7E8;
  }

